--- a/theme.css
+++ b/theme.css
@@ -1,3 +1,4 @@
+
 body {
   background-color: #f2f2f2;
 }
@@ -6,8 +7,27 @@ body {
   height: 100vh;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
-.mixlr_player {
-  /* max-width: 400px; */
+.last_fm {
+  padding-top: 20px;
+  font-family: "Barlow", sans-serif;
+  font-weight: 500;
+  text-transform: uppercase;
+  font-size: 10px;
+  letter-spacing: 1px;
+  text-align: center;
+}
+
+.last_fm a {
+  text-decoration: none;
+  color: #808080;
+}
+
+.last_fm a:hover {
+  background-color: #b3b3b3;
+  color: #FFF;
+  padding: 10px;
+  border-radius: 5px;
 }
