--- a/theme.css
+++ b/theme.css
@@ -26,8 +26,6 @@ body {
 }
 
 .last_fm a:hover {
-  background-color: #b3b3b3;
-  color: #FFF;
-  padding: 10px;
-  border-radius: 5px;
+  color: #000;
+  border-bottom: solid 1px #000;
 }
