--- a/style.css
+++ b/style.css
@@ -26,10 +26,6 @@ body {
   font-size: 188px;
 }
 
-.date-shadow {
-  font-size: 184px;
-}
-
 .shadows {
   position: absolute;
   z-index: -1;
@@ -38,7 +34,8 @@ body {
   font-weight: 500;
   opacity: .16;
   color: #e3e3e3;
-  filter: multiply(100%);
+  filter: invert(100%);
+  font-size: 188px;
 }
 
 .spotify-wrapper {
