--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ body {
   color: #121212;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: 1fr 110px 1fr 1fr 1fr;
   height: 100vh;
-  flex-flow: row nowrap;
   font-family: "Barlow", sans-serif;
   font-size: 24px;
 }
@@ -46,7 +46,7 @@ body {
 .artist {
   grid-row: 2;
   align-self: start;
-  grid-column: 3 / -1;
+  grid-column: 4 / -1;
   font-size: 36px;
 }
 
