--- a/style.css
+++ b/style.css
@@ -1,21 +1,99 @@
 body {
-  background: rgb(218,156,199);
-  background: linear-gradient(243deg, rgba(218,156,199,0.6768908246892507) 0%, rgba(230,165,210,1) 63%, rgba(153,110,140,1) 100%); 
+  background: #E489C4;
+  overflow: hidden;
 }
 
 .content {
   color: #121212;
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 1fr 110px 1fr 1fr 1fr;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
-  font-family: "Barlow", sans-serif;
-  font-size: 24px;
 }
 
-.text-wrapper {
-  padding-top: 100px;
-  grid-column: 3 / span 3;
+.spotify-wrapper {
+  position: relative;
+}
+
+.track {
+  position: absolute;
+  color: #D92647;
+  font-family: "Montserrat", sans-serif;
+  top: 68%;
+  left: calc(50% - 550px);
+  transform: translate(-50%, -50%);
+  width: 301px;
+  line-height: 60px;
+  font-weight: 900;
+}
+
+.title {
+  font-size: 92px;
+  text-transform: uppercase;
+  line-height: 80px;
+  letter-spacing: 4px;
+}
+
+.artist-label {
+  font-family: "Old Standard TT", serif;
+  font-weight: 400;
+  font-size: 29px;
+  margin-top: 20px;
+  position: relative;
+}
+
+
+.artist-label strong {
+  font-weight: 700;
+}
+
+.artist-label::after{
+  content: '';
+  position: absolute;
+  width: 100%;
+  border-bottom: solid 1px #D92647;
+  bottom: -20px;
+  left: 0;
+}
+
+.shadow {
+  opacity: .4;
+  width: 150%;
+  overflow: hidden;
+  font-family: "Montserrat", sans-serif;
+  color: #D92647;
+  position: absolute;
+  font-size: 262px;
+  z-index: -1;
+  text-transform: uppercase;
+  line-height: 180px;
+  filter: multiply(100%);
+}
+
+.shadow--top {
+  top: 0;
+  text-align: center;
+}
+
+.shadow--bottom-right {
+  top: 420px;
+  left: 55%;
+  line-height: 210px;
+}
+.shadow p {
+  margin: 20px;
+}
+
+.spotify-wrapper::before {
+  position: absolute;
+  background-color: #DB2944;
+  z-index: -1;
+  left: -25px;
+  top: 12px;
+  /* bottom: -20px; */
+  height: 524px;
+  width: 436px;
+  content: '';
 }
 
 .artist-shadow {
@@ -38,50 +116,3 @@ body {
   font-size: 188px;
 }
 
-.spotify-wrapper {
-  grid-column: 8 / span 5;
-  grid-row: 4;
-}
-
-.artist {
-  grid-row: 2;
-  align-self: start;
-  grid-column: 4 / -1;
-  font-size: 36px;
-}
-
-.title {
-  grid-column: 5 / span 7;
-  grid-row: 2;
-  font-weight: 100;
-  font-size: 64px;
-  align-self: end;
-}
-
-.label {
-  grid-column: 4 / span 8;
-  grid-row: 3;
-  align-self: start;
-  padding-top: 20px;
-  font-weight: 100;
-}
-
-.atmoradio,
-.date {
-  grid-row: 4;
-  grid-column: 4 / span 3;
-  align-self: end;
-  justify-self: end;
-  text-align: right;
-}
-
-.date {
-  font-weight: 500;
-  padding-bottom: 150px;
-  letter-spacing: 1px;
-}
-
-.atmoradio {
-  font-weight: 100;
-  padding-bottom: 185px;
-}
