--- a/style.css
+++ b/style.css
@@ -57,7 +57,6 @@ body {
 }
 
 .shadow {
-  /* opacity: .4; */
   width: 150%;
   overflow: hidden;
   font-family: "Syncopate", sans-serif;
@@ -77,7 +76,7 @@ body {
 }
 
 .shadow--bottom-right {
-  top: 420px;
+  top: 40vh;
   left: 55%;
   line-height: 20vh;
 }
@@ -91,7 +90,6 @@ body {
   z-index: -1;
   left: -25px;
   top: 12px;
-  /* bottom: -20px; */
   height: 524px;
   width: 436px;
   content: '';
@@ -102,18 +100,6 @@ body {
 }
 
 .title-shadow {
-  font-size: 11.39vw;
-}
-
-.shadows {
-  position: absolute;
-  z-index: -1;
-  bottom: 100px;
-  left: -40px;
-  font-weight: 500;
-  opacity: .16;
-  color: #e3e3e3;
-  filter: multiply(100%);
   font-size: 11.39vw;
 }
 
