--- a/style.css
+++ b/style.css
@@ -31,13 +31,14 @@ body {
   font-size: 5.48vw;
   font-weight: 700;
   text-transform: uppercase;
-  line-height: 6.62vh;
+  line-height: 7.62vh;
 }
 
 .artist-label {
   font-family: "Old Standard TT", serif;
   font-weight: 400;
   font-size: 1.91vw;
+  margin-top: 20px;
   position: relative;
   padding-left: 6px;
 }
@@ -57,6 +58,7 @@ body {
 }
 
 .shadow {
+  /* opacity: .4; */
   width: 150%;
   overflow: hidden;
   font-family: "Syncopate", sans-serif;
@@ -76,7 +78,7 @@ body {
 }
 
 .shadow--bottom-right {
-  top: 40vh;
+  top: 420px;
   left: 55%;
   line-height: 20vh;
 }
@@ -90,6 +92,7 @@ body {
   z-index: -1;
   left: -25px;
   top: 12px;
+  /* bottom: -20px; */
   height: 524px;
   width: 436px;
   content: '';
@@ -103,8 +106,41 @@ body {
   font-size: 11.39vw;
 }
 
-@media (max-width: 1320px) {
+.shadows {
+  position: absolute;
+  z-index: -1;
+  bottom: 100px;
+  left: -40px;
+  font-weight: 500;
+  opacity: .16;
+  color: #e3e3e3;
+  filter: multiply(100%);
+  font-size: 11.39vw;
+}
+
+@media (max-width: 1200px) {
   .track {
-    left: 13vw;
+    top: unset;
+    bottom: 3vw;
+    width: 50vw;
+    line-height: 1.71vh;
+    transform: translate(0, 0);
+    left: 3vw;
+  }
+  .title {
+    line-height: 5.62vh;
+  }
+  .artist-label {
+    margin-top: 0;
+  }
+  .artist-label::after {
+    left: 6px;
+    bottom: -6px;
+  }
+}
+
+@media (max-height: 850px) {
+  .spotify-wrapper {
+    top: -10%;
   }
 }
