--- a/style.css
+++ b/style.css
@@ -1,145 +1,14 @@
 body {
-  background: #75BC59;; 
-  overflow: hidden;
+  background-color: #fff;
 }
 
-.content {
-  color: #121212;
+.main {
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
-  height: 100vh;
 }
 
-.spotify-wrapper {
-  position: relative;
-}
-
-.track {
-  position: absolute;
-  color: #2A4AE0;
-  top: 71%;
-  left: 3vw;
-  transform: translateY(-50%);
-  width: 20.54vw;
-  line-height: 5.71vh;
-  font-weight: 900;
-}
-
-.title {
-  font-family: "Syncopate", sans-serif;
-  font-size: 3.48vw;
-  font-weight: 700;
-  text-transform: uppercase;
-  line-height: 4.62vh;
-}
-
-.artist-label {
-  font-family: "Old Standard TT", serif;
-  font-weight: 400;
-  font-size: 1.91vw;
-  margin-top: 20px;
-  position: relative;
-  padding-left: 6px;
-}
-
-
-.artist-label strong {
-  font-weight: 700;
-}
-
-.artist-label::after{
-  content: '';
-  position: absolute;
-  width: 100%;
-  border-bottom: solid 1px #2A4AE0;
-  bottom: -20px;
-  left: 6px;
-}
-
-.shadow {
-  width: 150%;
-  overflow: hidden;
-  font-family: "Syncopate", sans-serif;
-  font-weight: 400;
-  color: #2A4AE0;
-  position: absolute;
-  font-size: 13.21vw;
-  z-index: -1;
-  text-transform: uppercase;
-  line-height: 17.14vh;
-  filter: multiply(100%);
-}
-
-.shadow--top {
-  top: 0;
-  text-align: center;
-}
-
-.shadow--bottom-right {
-  top: 40vh;
-  left: 55%;
-  line-height: 20vh;
-}
-.shadow p {
-  margin: 20px;
-}
-
-.spotify-wrapper::before {
-  position: absolute;
-  background-color: #2A4AE0;
-  z-index: -1;
-  left: -25px;
-  top: 12px;
-  /* bottom: -20px; */
-  height: 524px;
-  width: 436px;
-  content: '';
-}
-
-.artist-shadow {
-  font-size: 11.39vw;
-}
-
-.title-shadow {
-  font-size: 11.39vw;
-}
-
-.shadows {
-  position: absolute;
-  z-index: -1;
-  bottom: 100px;
-  left: -40px;
-  font-weight: 500;
-  opacity: .16;
-  color: #e3e3e3;
-  filter: multiply(100%);
-  font-size: 11.39vw;
-}
-
-@media (max-width: 1200px) {
-  .track {
-    top: unset;
-    bottom: 3vw;
-    width: 50vw;
-    line-height: 1.71vh;
-    transform: translate(0, 0);
-    left: 3vw;
-  }
-  .title {
-    line-height: 5.62vh;
-  }
-  .artist-label {
-    margin-top: 0;
-  }
-  .artist-label::after {
-    left: 6px;
-    bottom: -6px;
-  }
-}
-
-@media (max-height: 850px) {
-  .spotify-wrapper {
-    top: -10%;
-  }
+.main img {
+  width: 80%;
+  height: 80%;
 }
