--- a/style.css
+++ b/style.css
@@ -1,14 +1,126 @@
 body {
   background-color: #fff;
+  margin-right: 36px;
 }
 
 .main {
-  display: flex;
-  justify-content: left;
-  align-items: center;
 }
 
-.main img {
-  width: 80%;
-  height: 80%;
+.logo {
+  max-width: 100%;
+  max-height: 200px;
+}
+
+.podcast-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  margin-left: 36px;
+  max-width: calc(100% - 40px);
+}
+
+.podcast-list__item {
+  flex: 0 1 auto;
+  margin-right: 18px;
+  margin-bottom: 18px;
+  border: solid 2px #fff;
+  position: relative;
+  overflow: hidden;
+}
+
+.podcast-list__item img {
+  transition: box-shadow 0.3s ease;
+}
+
+.overlay-number {
+  position: absolute;
+  top: 0;
+  right: 20px;
+  font-family: "Mohave", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 500;
+  font-size: 10em;
+  transform: translateY(-10em);
+  transition: transform .2s ease;
+}
+
+.podcast-list__item:hover .overlay-number {
+  transform: translateY(0)
+}
+
+.overlay-number-01 {
+  color: rgba(90,251,50,1);
+}
+
+.overlay-number-02 {
+  color: rgba(213,57,224,1);
+}
+
+.spotify-cta {
+  position: absolute;
+  right: 30px;
+  font-family: "Mohave", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 500;
+  color: #000;
+  font-size: 1.5em;
+  text-transform: uppercase;
+  transition: transform .2s ease;
+  transform: translateY(0);
+}
+
+.spotify-cta,
+.overlay-number {
+  pointer-events: none;
+}
+
+.spotify-cta-arrow {
+  padding-left: 6px;
+}
+
+.podcast-list__item img:hover {
+  -webkit-box-shadow: 0px 10px 13px -7px #c7c7c7, 5px 5px 15px 5px rgba(231,231,231,0); 
+  box-shadow: 0px 10px 13px -7px #c7c7c7, 5px 5px 15px 5px rgba(231,231,231,0);
+}
+
+.podcast-list__item:hover .spotify-cta {
+  transform: translateY(-3em);
+}
+
+.podcast-list__item img {
+  width: 100%;
+  height: auto;
+  min-width: 300px;
+  min-height: 300px;
+  max-width: 600px;
+  max-height: 600px;
+  object-fit: cover;
+}
+
+@media (max-width: 720px) {
+  .podcast-list__item {
+    margin-right: 8px;
+    margin-bottom: 8px;
+  }
+
+  .overlay-number {
+    font-size: 6em;
+    transform: translateY(-1.5em);
+  }
+
+  .spotify-cta {
+    transform: translateY(0em);
+    font-size: 1.2em;
+  }
+
+  .podcast-list__item:hover .overlay-number {
+    transform: translateY(0em);
+  }
+
+  .podcast-list__item:hover .spotify-cta {
+    transform: translateY(-2.8em);
+  }
 }
