--- a/style.css
+++ b/style.css
@@ -54,10 +54,11 @@ body {
 .overlay-number {
   position: absolute;
   top: 0;
-  right: 20px;
+  right: 24px;
   font-family: "Mohave", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 500;
   font-size: 10em;
+  letter-spacing: -0.03em;
   transform: translateY(-10em);
   transition: transform .2s ease;
 }
@@ -79,6 +80,8 @@ body {
   right: 30px;
   font-family: "Mohave", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 500;
+  font-style: italic;
+  letter-spacing: -0.03em;
   color: #000;
   font-size: 1.5em;
   text-transform: uppercase;
@@ -139,7 +142,14 @@ body {
   }
 
   .icon__social {
-    width: 48px;
-    height: 48px;
+    width: 72px;
+    height: 72px;
+  }
+
+  .logo {
+    position: relative;
+    max-height: 400px;
+    top: -40px;
+    left: -30px;
   }
 }
