--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
+:root {
+  --color-01: rgba(90,251,50,1);
+  --color-02: rgba(213,57,224,1);
+  --font-atmoradio: "Mohave", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 body {
   background-color: #fff;
   margin-right: 36px;
+  color: #000;
 }
 
 .header {
@@ -18,6 +25,12 @@ body {
 .icon__social {
   width: 24px;
   height: 24px;
+  color: #000;
+  transition: color ease .2s;
+}
+
+.instagram:hover {
+  color: var(--color-02);
 }
 
 .logo {
@@ -55,7 +68,7 @@ body {
   position: absolute;
   top: 0;
   right: 24px;
-  font-family: "Mohave", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: var(--font-atmoradio);
   font-weight: 500;
   font-size: 10em;
   letter-spacing: -0.03em;
@@ -68,17 +81,17 @@ body {
 }
 
 .overlay-number-01 {
-  color: rgba(90,251,50,1);
+  color: var(--color-01);
 }
 
 .overlay-number-02 {
-  color: rgba(213,57,224,1);
+  color: var(--color-02);
 }
 
 .spotify-cta {
   position: absolute;
   right: 30px;
-  font-family: "Mohave", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: var(--font-atmoradio);
   font-weight: 500;
   font-style: italic;
   letter-spacing: -0.03em;
