--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 :root {
   --color-01: rgba(90,251,50,1);
+  --color-01-faded: rgba(249,255,213,1);
   --color-02: rgba(213,57,224,1);
+  --color-02-faded: rgba(217,254,187,1);
   --font-atmoradio: "Mohave", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -8,6 +10,7 @@ body {
   background-color: #fff;
   margin-right: 36px;
   color: #000;
+  height: 100%;
 }
 
 .header {
@@ -55,17 +58,12 @@ body {
   flex: 0 1 auto;
   margin-right: 18px;
   margin-bottom: 18px;
-  border: solid 2px #fff;
   position: relative;
   overflow: hidden;
 }
 
 .podcast-list__item:last-of-type {
   margin-right: 0;
-}
-
-.podcast-list__item img {
-  transition: box-shadow 0.3s ease;
 }
 
 .overlay-number {
@@ -82,6 +80,42 @@ body {
 
 .podcast-list__item:hover .overlay-number {
   transform: translateY(0)
+}
+
+.item-01,
+.item-02 {
+  position: relative;
+  overflow: hidden;
+}
+
+.item-01::before,
+.item-02::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity .6s ease;
+  pointer-events: none;
+  z-index: -1;
+}
+
+.item-01::before {
+  background: radial-gradient(circle, rgba(255,255,255,1) 0%, var(--color-01) 100%);
+}
+
+.item-02::before {
+  background: radial-gradient(circle, rgba(255,255,255,1) 0%, var(--color-02) 100%);
+}
+
+.item-01:hover::before {
+  opacity: 1;
+}
+
+.item-02:hover::before {
+  opacity: 1;
 }
 
 .overlay-number-01 {
@@ -113,11 +147,6 @@ body {
 
 .spotify-cta-arrow {
   padding-left: 6px;
-}
-
-.podcast-list__item img:hover {
-  -webkit-box-shadow: 0px 10px 13px -7px #c7c7c7, 5px 5px 15px 5px rgba(231,231,231,0); 
-  box-shadow: 0px 10px 13px -7px #c7c7c7, 5px 5px 15px 5px rgba(231,231,231,0);
 }
 
 .podcast-list__item:hover .spotify-cta {
