--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
   --color-01-faded: rgba(249,255,213,1);
   --color-02: rgba(213,57,224,1);
   --color-02-faded: rgba(217,254,187,1);
+  --color-03: rgba(234,51,132,1);
+  --color-03-faded: rgba(189,253,234,1);
   --font-atmoradio: "Mohave", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -75,21 +77,19 @@ body {
   font-size: 10em;
   letter-spacing: -0.03em;
   transform: translateY(-10em);
-  transition: transform .2s ease;
+  transition: transform .4s ease;
 }
 
 .podcast-list__item:hover .overlay-number {
   transform: translateY(0)
 }
 
-.item-01,
-.item-02 {
+.podcast-list__item {
   position: relative;
   overflow: hidden;
 }
 
-.item-01::before,
-.item-02::before {
+.podcast-list__item::before {
   content: '';
   position: fixed;
   top: 0;
@@ -97,24 +97,28 @@ body {
   width: 100%;
   height: 100%;
   opacity: 0;
-  transition: opacity .6s ease;
+  transition: opacity 1.2s ease-in-out;
   pointer-events: none;
   z-index: -1;
 }
 
 .item-01::before {
-  background: radial-gradient(circle, rgba(255,255,255,1) 0%, var(--color-01) 100%);
+  /* Switch when moved to 3rd position on the right 👇 */
+  /* background: linear-gradient(90deg, var(--color-01-faded) 0%, var(--color-01) 100%); */
+  background: radial-gradient(circle, var(--color-01-faded) 0%, var(--color-01) 100%);
 }
 
 .item-02::before {
-  background: radial-gradient(circle, rgba(255,255,255,1) 0%, var(--color-02) 100%);
+  /* Switch when moved to 2nd position in the center 👇 */
+  /* background: radial-gradient(circle, var(--color-02-faded) 0%, var(--color-02) 100%); */
+  background: linear-gradient(90deg, var(--color-02) 0%, var(--color-02-faded) 100%);
 }
 
-.item-01:hover::before {
-  opacity: 1;
+.item-03::before {
+  background: linear-gradient(90deg, var(--color-03) 0%, var(--color-03-faded) 100%);
 }
 
-.item-02:hover::before {
+.podcast-list__item:hover::before {
   opacity: 1;
 }
 
@@ -124,6 +128,10 @@ body {
 
 .overlay-number-02 {
   color: var(--color-02);
+}
+
+.overlay-number-03 {
+  color: var(--color-03);
 }
 
 .spotify-cta {
@@ -158,8 +166,8 @@ body {
   height: auto;
   min-width: 400px;
   min-height: 400px;
-  max-width: 600px;
-  max-height: 600px;
+  max-width: 500px;
+  max-height: 500px;
   object-fit: cover;
 }
 
